EN: Added css folder

--- a/views/index.html
+++ b/views/index.html
@@ -3,8 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Application</title>
+
+    <link rel="stylesheet" href="../css/index.css">
+
   </head>
   <body>
+
+    <div id="client">
+      <button type="submit" formaction="/client"> Client </button>
+    </div>
+
+    <div id="doctor">
+      <button type="submit" formaction="/doctor">  Doctor </button>
+    </div>
 
   </body>
 </html>
