EN: Added css styles

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #E1F5C4;
+  background-color: #F9CDAD;
 }
 
 div {
@@ -13,5 +13,5 @@ button {
   margin-top: 45%;
   padding: 20px 50px 20px 50px;
   border-radius: 10px;
-  background-color: #F9D423;
+  background-color: #FC9D9A;
 }
