--- a/views/doctor.html
+++ b/views/doctor.html
@@ -3,8 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title> Doctor View </title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel='stylesheet' href='../css/fullcalendar.css' />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="../js/moment.min.js"></script>
+    <script src='../js/fullcalendar.js'></script>
   </head>
   <body>
 
+    <div id="listPatient">
+      <ul>
+        <li>
+          <p> Nom : John Doe </p>
+          <p> Age : 32 years old</p>
+          <p> Medical past : Heart attack </p>
+          <p> Medication : Nitro </p>
+          <p> Consultation : described symptoms </p>
+          <p> Last consultation : 02/05/18 </p>
+        </li>
+      </ul>
+    </div>
+
+    <div id="scheduleContainer">
+      <div id="schedule"></div>
+    </div>
+
+    <script src="../js/schedule.js"></script>
   </body>
 </html>
