add bootstrap to index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,19 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Application</title>
+    <title>Medical Appointment System</title>
 
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
   </head>
   <body>
-
+  <div id="container">
+  </div>
     <div id="client">
-      <button type="submit" formaction="/client"> Client </button>
+      <button type="button" class="btn btn-primary">Client</button>
     </div>
 
     <div id="doctor">
-      <button type="submit" formaction="/doctor">  Doctor </button>
+      <button type="button" class="btn btn-primary">Doctor</button>
     </div>
 
   </body>
