minor style change in progress

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Medical Appointment System</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+<head>
+  <meta charset="utf-8">
+  <title>Medical Appointment System</title>
 
-  </head>
-  <body>
-  <div id="container">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+    crossorigin="anonymous">
+
+</head>
+
+<body>
+  <div class="container">
   </div>
-    <div id="client">
+  <div class="row">
+    <div class="col">
       <button type="button" class="btn btn-primary">Client</button>
     </div>
-
-    <div id="doctor">
+    <div class="col">
       <button type="button" class="btn btn-primary">Doctor</button>
     </div>
 
-  </body>
+  </div>
+
+
+  </div>
+</body>
+
 </html>
