--- a/public/css/fullcalendar.css
+++ b/public/css/fullcalendar.css
@@ -10,7 +10,7 @@ ul {
   list-style-type: none;
 }
 
-#listPatient {
+#listPatient #listOfClinics{
   height: 100%;
   width: 25%;
   background-color: #83AF9B;
