--- a/views/doctor.ejs
+++ b/views/doctor.ejs
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title> Doctor View </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel='stylesheet' href='css/fullcalendar.css' />
+    <link rel='stylesheet' href='css/fullcalendarDoctor.css' />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/moment.min.js"></script>
-    <script src='js/fullcalendar.js'></script>
+    <script src='js/fullcalendarDoctor.js'></script>
   </head>
   <body>
 
