--- a/views/client.ejs
+++ b/views/client.ejs
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href='css/fullcalendarDoctor.css' />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/moment.min.js"></script>
-    <script src='js/fullcalendarDoctor.js'></script>
+    <script src='js/fullcalendar.js'></script>
   </head>
 
   <body>
@@ -29,6 +29,12 @@
         <% }) %>
         </ul>
     </div>
+
+    <div id="scheduleContainer">
+      <div id="schedule"></div>
+    </div>
+
+    <script src="js/scheduleClient.js"></script>
   </body>
 
 </html>
