EN Added corrections

--- a/views/doctor.ejs
+++ b/views/doctor.ejs
@@ -25,7 +25,7 @@
     </div>
 
     <div id="scheduleContainer">
-      <div id="schedule"></div>
+      <div id="scheduleDoctor"></div>
     </div>
 
     <script src="js/scheduleDoctor.js"></script>
