--- a/views/client.ejs
+++ b/views/client.ejs
@@ -31,7 +31,7 @@
     </div>
 
     <div id="scheduleContainer">
-      <div id="schedule"></div>
+      <div id="scheduleClient"></div>
     </div>
 
     <script src="js/scheduleClient.js"></script>
