EN corrections again

--- a/views/client.ejs
+++ b/views/client.ejs
@@ -34,7 +34,7 @@
       <div id="scheduleClient"></div>
     </div>
 
-    <script src="js/scheduleClient.js"></script>
+    <script src="js/schedule.js"></script>
   </body>
 
 </html>
