--- a/views/doctor.ejs
+++ b/views/doctor.ejs
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href='css/fullcalendar.css' />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/moment.min.js"></script>
-    <script src='js/fullcalendarDoctor.js'></script>
+    <script src='js/fullcalendar.js'></script>
   </head>
   <body>
 
@@ -28,6 +28,6 @@
       <div id="scheduleDoctor"></div>
     </div>
 
-    <script src="js/scheduleDoctor.js"></script>
+    <script src="js/schedule.js"></script>
   </body>
 </html>
