EN Added working schedule to doctor and client

--- a/public/css/fullcalendar.css
+++ b/public/css/fullcalendar.css
@@ -10,7 +10,14 @@ ul {
   list-style-type: none;
 }
 
-#listPatient #listOfClinics{
+#listPatient{
+  height: 100%;
+  width: 25%;
+  background-color: #83AF9B;
+  float: right;
+}
+
+#listOfClinics{
   height: 100%;
   width: 25%;
   background-color: #83AF9B;
