AC Added the main page on index.ejs and index.css

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,5 @@
-div {
-  float: left;
-  width: 50%;
-  height: 100%;
+body {
+  overflow-y: hidden;
 }
 
 button {
@@ -12,8 +10,35 @@ button {
   background-color: #FC9D9A;
 }
 
-body {
-    background-image: url("https://www.aci.health.nsw.gov.au/__data/assets/image/0005/278069/patients.png");
-    background-repeat: no-repeat;
-    background-size: 50% 100%;
+.col {
+  position: relative;
+  width: 50%;
+}
+
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.col:hover .image {
+  opacity: 0.3;
+}
+
+.col:hover .middle {
+  opacity: 1;
 }
