--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,17 +8,27 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
     crossorigin="anonymous">
 
+  <link rel="stylesheet" href="./css/index.css">
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
 </head>
 
 <body>
   <div class="container">
   </div>
   <div class="row">
-    <div class="col">
-      <button type="button" class="btn btn-primary">Client</button>
+    <div class="col" id="client">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7g5nMVV6uUjQdi1-CoN0Mf2GQGZCKHV7s_npR6ftRMiRNtbl1" class="image" style = "height: 780px; width:100%">
+      <div class="middle">
+        <button type="button" class="btn btn-primary btn-lg">Client</button>
+      </div>
     </div>
-    <div class="col">
-      <button type="button" class="btn btn-primary">Doctor</button>
+    <div class="col" id="doctor">
+      <img src="https://cdn2.iconfinder.com/data/icons/medicine-4-1/512/doctor_appointment-512.png" class="image" style = "height: 715px; width:100%">
+      <div class="middle">
+        <button type="button" class="btn btn-primary btn-lg">Doctor</button>
+      </div>
     </div>
 
   </div>
