--- a/views/doctor.ejs
+++ b/views/doctor.ejs
@@ -10,6 +10,28 @@
     <script src='js/fullcalendar.js'></script>
   </head>
   <body>
+<script>
+    
+$(document).ready(function(){
+  $("#schedule").fullCalendar({
+    weekends: false,
+    defaultView:'agendaWeek',
+    minTime: "08:0:00",
+    maxTime: "18:00:00",
+    slotDuration: "00:15:00",
+    allDaySlot: false,
+    themeSystem: 'bootstrap3',
+    header: false,
+    selectable: true,
+    selectHelper: true,
+    selectOverlap: false,
+    contentHeight: 700,
+    editable: true,
+    eventColor: '#FE4365',
+    eventBorderColor: "#FC9D9A",
+
+  })};
+    </script>
 
     <div id="listPatient">
       <ul>
@@ -28,6 +50,6 @@
       <div id="schedule"></div>
     </div>
 
-    <script src="js/schedule.js"></script>
+    
   </body>
 </html>
