AC login page now redirect to user id

--- a/views/form.html
+++ b/views/form.html
@@ -12,13 +12,13 @@
       <fieldset>
         <legend>Important information:</legend>
         First name:<br>
-        <input type="text" name="firstname" value="">
+        <input type="text" name="firstname" value="" required>
         <br>
         Last name:<br>
-        <input type="text" name="lastname" value="">
+        <input type="text" name="lastname" value="" required>
         <br>
         Describe your symptoms:<br>
-        <textarea name="symptoms" rows="8" cols="50"></textarea>
+        <textarea name="symptoms" rows="8" cols="50" required></textarea>
         <br><br>
         <input type="submit" value="Submit">
       </fieldset>
