--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,13 +2,13 @@ body {
   overflow-y: hidden;
 }
 
-button {
+/*button {
   margin-left: 45%;
   margin-top: 45%;
   padding: 20px 50px 20px 50px;
   border-radius: 10px;
   background-color: #FC9D9A;
-}
+}*/
 
 .col {
   position: relative;
