--- a/views/appointment.ejs
+++ b/views/appointment.ejs
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" type="text/css" href="css/calender.css">
 
   </head>
   <body>
@@ -258,6 +258,5 @@
 </div>
 
 
-    <script src='../public/js/shedule.js'></script>
   </body>
 </html>
