--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,6 +2,9 @@ body {
   overflow-y: hidden;
 }
 
+h1{
+  text-align: center;
+}
 /*button {
   margin-left: 45%;
   margin-top: 45%;
@@ -22,6 +25,7 @@ body {
   height: auto;
   transition: .5s ease;
   backface-visibility: hidden;
+  text-align: center;
 }
 
 .middle {
