--- a/views/client.ejs
+++ b/views/client.ejs
@@ -4,11 +4,14 @@
     <title>Client</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <style>
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
       #map {
-        height: 100%;
+        height: 90%;
+        top: 2%;
       }
       /* Optional: Makes the sample page fill the window. */
       html, body {
@@ -16,9 +19,13 @@
         margin: 0;
         padding: 0;
       }
+      h1{
+        text-align: center;
+      }
     </style>
   </head>
   <body>
+  <h1>Select a clinic below:</h1>
     <div id="map"></div>
     <script>
       var map;
