--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,13 +15,16 @@
 </head>
 
 <body>
-  <h1>MedSched</h1>
+<div class="shake-opacity">
+  <h1>MedSched</h1></div>
   <div class="row">
     <div class="col" id="client">
     <!--
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7g5nMVV6uUjQdi1-CoN0Mf2GQGZCKHV7s_npR6ftRMiRNtbl1" class="image" style = "height: 780px; width:100%">
       -->
-      <i class="fas fa-user-injured image" style="font-size: 40em; color: #b070ff"></i>
+      <div class="shake-hard">
+      <i class="fas fa-user-injured image" style="font-size: 30em; color: #b070ff"></i>
+      </div>
       <div class="middle">
         <form class="form" onsubmit="location.href='./client/' + document.getElementById('clientID').value; return false;" method="post">
           <input type="text" id="clientID" name="clientID" placeholder="ID" required><br><br>
@@ -33,7 +36,9 @@
     <!--
       <img src="https://cdn2.iconfinder.com/data/icons/medicine-4-1/512/doctor_appointment-512.png" class="image" style = "height: 715px; width:100%">
       -->
-      <i class="fas fa-user-md image" style="font-size: 40em; color: #70a6ff"></i>
+      <div class="shake-chunk">
+      <i class="fas fa-user-md image" style="font-size: 30em; color: #70a6ff"></i>
+      </div>
       <div class="middle">
         <form class="form" onsubmit="location.href='./doctor/' + document.getElementById('doctorID').value; return false;" method="post">
           <input type="text" id= "doctorID" name="doctorID" placeholder="ID" required><br><br>
