--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,11 +23,11 @@
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7g5nMVV6uUjQdi1-CoN0Mf2GQGZCKHV7s_npR6ftRMiRNtbl1" class="image" style = "height: 780px; width:100%">
       -->
       <div class="shake-hard">
-      <i class="fas fa-user-injured image" style="font-size: 30em; color: #b070ff"></i>
+      <i class="fas fa-user-injured image" style="font-size: 30em; color: #5482ab"></i>
       </div>
       <div class="middle">
         <form class="form" onsubmit="location.href='./client/' + document.getElementById('clientID').value; return false;" method="post">
-          <input type="text" id="clientID" name="clientID" placeholder="ID" required><br><br>
+          <input type="text" id="clientID" name="clientID" placeholder="ID" value="5c4cc4e2a78cb71f480bb4e9" required><br><br>
           <input type="submit" value="Client" class="btn btn-primary btn-lg">
         </form>
       </div>
@@ -37,7 +37,7 @@
       <img src="https://cdn2.iconfinder.com/data/icons/medicine-4-1/512/doctor_appointment-512.png" class="image" style = "height: 715px; width:100%">
       -->
       <div class="shake-chunk">
-      <i class="fas fa-user-md image" style="font-size: 30em; color: #70a6ff"></i>
+      <i class="fas fa-user-md image" style="font-size: 30em; color: #003946"></i>
       </div>
       <div class="middle">
         <form class="form" onsubmit="location.href='./doctor/' + document.getElementById('doctorID').value; return false;" method="post">
