--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,10 +1,12 @@
 body {
   overflow-y: hidden;
+  background-color: #eaab00;
 }
 
 h1{
   text-align: center;
   font-size: 10em;
+  color: #003946;
 }
 /*button {
   margin-left: 45%;
