--- a/views/client.ejs
+++ b/views/client.ejs
@@ -32,7 +32,7 @@
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: 45.4956567, lng: -73.578844},
-          zoom: 10
+          zoom: 12
         });
         var clinics = <%-JSON.stringify(getAllClinics)%>; //Saves var from server
         var userId = <%-JSON.stringify(userId)%>;
@@ -56,10 +56,9 @@
         //Add marker function
         function popup(marker, userId, clinicId, name, addr) {
           var infowindow = new google.maps.InfoWindow({
-            content: '<b>' + name + '</b>'+ '</br>' + 
-            addr + '</br>' + 
-            'Click below to make an appointment: </br>' +
-            '<form action="/appointment" method="post"> <input type = "hidden" name = "userId" value = "'+userId+'" /><input type = "hidden" name = "clinicId" value = "'+clinicId+'" /><input type="submit" value="Go"></input></form>'
+            content: '<strong style="font-size:2em">' + name + '</strong>'+ '</br>' + 
+            '<span style="font-size:1.5em">' + addr + '</span></br>' + 
+            '<form action="/appointment" method="post"> <input type = "hidden" name = "userId" value = "'+userId+'" /><input type = "hidden" name = "clinicId" value = "'+clinicId+'" /><input type="submit" value="Make an appointment" style="text-align:center; width: 20em;  height: 3em;"></input></form>'
             ,
           });
           marker.addListener('click', function() {
