--- a/views/appointment.ejs
+++ b/views/appointment.ejs
@@ -2,10 +2,21 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="css/calender.css">
-
+    <link rel="stylesheet" href="css/calendar-appt.css">
   </head>
   <body>
+
+    <form id='form' class="form-style-2" action="#">
+      <input placeholder="First name" name="fname" type="text" required />
+      <input placeholder="Last name" name="lname" type="text" required />
+      <input id="cell" type='hidden' name="cellId" value="" />
+      <textarea placeholder="Describe your symptoms"></textarea><br/>
+      <input class="formBtn" type="submit" method='post' action='/createAppointment'/>
+    </form>
+ <div id="header">
+      <p> Hi <strong><%= userName%></strong></p>
+      <p> Let's make an appointment to <strong> <%= clinicName%></strong></p>
+    </div>
 
     <div class="calendar">
 
@@ -13,7 +24,7 @@
       <button class="secondary" style="align-self: flex-start; flex: 0 0 1">Today</button>
       <div class="calendar__title" style="display: flex; justify-content: center; align-items: center">
         <div class="icon secondary chevron_left">‹</div>
-        <h1 class="" style="flex: 1;"><span></span><strong>18 JAN – 24 JAN</strong> 2016</h1>
+        <h1 class="" style="flex: 1;"><span></span><strong>28 JAN – 1 FEB</strong> 2019</h1>
         <div class="icon secondary chevron_left">›</div>
       </div>
       <div style="align-self: flex-start; flex: 0 0 1"></div>
@@ -26,13 +37,13 @@
   <thead>
     <tr>
       <th class="headcol"></th>
-      <th>Mon, 18</th>
-      <th>Tue, 19</th>
-      <th class="today">Wed, 20</th>
-      <th>Thu, 21</th>
-      <th>Fri, 22</th>
-      <th class="secondary">Sat, 23</th>
-      <th class="secondary">Sun, 24</th>
+      <th>Mon, 28</th>
+      <th>Tue, 29</th>
+      <th>Wed, 30</th>
+      <th>Thu, 31</th>
+      <th>Fri, 1</th>
+      <th class="secondary">Sat, 2</th>
+      <th class="secondary">Sun, 3</th>
     </tr>
   </thead>
   </table>
@@ -86,10 +97,10 @@
       <td></td>
       <td><div class="event single">09:30–10:00 Meeting</div></td>
       <td class="now"><div class="event single">09:30–10:00 Meeting</div></td>
-      <td><div class="event single">09:30–10:00 Meeting</div></td>
-      <td><div class="event double green">09:30–10:30 Meeting</div></td>
+      <td><div class="event single red">09:30–10:00 Meeting</div></td>
+      <td><div class="event double ">09:30–10:30 Meeting</div></td>
       <td><div class="event single green">09:30–10:00 Meeting</div></td>
-      <td><div class="event single">09:30–10:00 Meeting</div></td>
+      <td><div class="event single red">09:30–10:00 Meeting</div></td>
     </tr>
     <tr>
       <td class="headcol">10:00</td>
@@ -134,8 +145,8 @@
     <tr>
       <td class="headcol">12:00</td>
       <td></td>
-      <td><div class="event single">10:00–11:00 Meeting</div></td>
-      <td><div class="event double">10:00–11:00 Meeting</div></td>
+      <td><div class="event single red">12:00–12:30 Meeting</div></td>
+      <td><div class="event double">12:00–12:30 Meeting</div></td>
       <td></td>
       <td></td>
       <td></td>
@@ -258,5 +269,6 @@
 </div>
 
 
+    <script src='js/calendar.appt.js'></script>
   </body>
 </html>
