--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
       <div class="middle">
         <form class="form" onsubmit="location.href='./client/' + document.getElementById('clientID').value; return false;" method="post">
           <input type="text" id="clientID" name="clientID" placeholder="ID" value="5c4cc4e2a78cb71f480bb4e9" required><br><br>
-          <input type="submit" value="Client" class="btn btn-primary btn-lg">
+          <input type="submit" value="Patient" class="btn btn-primary btn-lg">
         </form>
       </div>
     </div>
