--- a/views/confirm.ejs
+++ b/views/confirm.ejs
@@ -8,5 +8,8 @@
     <body>
         <h1>Appointment confirmed!</h1>
         <p>Check your email for the confirmation.</p>
+        <p>UserId: <%= userId%></p>
+        <p>ClinicId: <%= clinicId%></p>
+        <a href="/">Go back to home</a>
     </body>
 </html>
