--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,7 @@
       </div>
       <div class="middle">
         <form action="/doctor" method="post">
-          <input type="text" id="clinicID" name="clinicID" placeholder="ID" required><br><br>
+          <input type="text" id="clinicID" name="clinicID" placeholder="ID" value="5c4ccbea6eb4fb4168c5218f" required><br><br>
           <input type="submit" value="Doctor" class="btn btn-primary btn-lg">
         </form>
       </div>
