--- a/public/css/calendar-appt.css
+++ b/public/css/calendar-appt.css
@@ -322,3 +322,15 @@ tr td:nth-child(2), tr td:nth-child(3), .past {
 .icon:hover {
   color: red;
 }
+
+a.button {
+    float: right;
+    text-decoration: none;
+    color: black;
+    background-color: #eaab00;
+}
+
+a.button:hover{
+  color: black;
+  text-decoration: none;
+}
