--- a/public/css/client.css
+++ b/public/css/client.css
@@ -1,26 +1,16 @@
 body {
-  background-image: linear-gradient(orange, yellow);
+  overflow-y: hidden;
+  background-image: linear-gradient(#eaab00, #eaab00);
 }
 
-.clinic {
-  height: 20%;
-  width: 25%;
-  background-image: url("https://www.desktopbackground.org/p/2014/08/03/803515_sun-life-financial_1024x768_h.jpg");
-  color: darkblue;
-  border: 1px solid darkblue;
-  list-style-type: none;
+a.button {
+    float: right;
+    text-decoration: none;
+    color: black;
+    background-color: #eaab00;
 }
 
-.name {
-  font-weight: bold;
-}
-
-.add {
-  font-style: italic;
-}
-
-
-div.clinics {
-  width: 100%;
-  height: 100%;
+a.button:hover{
+  color: black;
+  text-decoration: none;
 }
