--- a/views/client.ejs
+++ b/views/client.ejs
@@ -4,6 +4,8 @@
     <title>Client</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/css/client.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <style>
@@ -25,7 +27,7 @@
     </style>
   </head>
   <body>
-  <h1>Select a clinic below:</h1>
+  <h1>Select a clinic below: <a href="/" class="button" >  <i class="fa fa-home"></i> </a> </h1>
     <div id="map"></div>
     <script>
       var map;
@@ -56,8 +58,8 @@
         //Add marker function
         function popup(marker, userId, clinicId, name, addr) {
           var infowindow = new google.maps.InfoWindow({
-            content: '<strong style="font-size:2em">' + name + '</strong>'+ '</br>' + 
-            '<span style="font-size:1.5em">' + addr + '</span></br>' + 
+            content: '<strong style="font-size:2em">' + name + '</strong>'+ '</br>' +
+            '<span style="font-size:1.5em">' + addr + '</span></br>' +
             '<form action="/appointment" method="post"> <input type = "hidden" name = "userId" value = "'+userId+'" /><input type = "hidden" name = "clinicId" value = "'+clinicId+'" /><input type="submit" value="Make an appointment" style="text-align:center; width: 20em;  height: 3em;"></input></form>'
             ,
           });
