--- a/views/doctor.ejs
+++ b/views/doctor.ejs
@@ -3,10 +3,11 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="css/calendar-appt.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
  <div id="header">
-      <p> Current appointments for <strong><%= clinicName%></strong></p>
+      <p> Current appointments for <strong><%= clinicName%></strong> <a href="/" class="button"><i class="fa fa-home"></i></a> </p>
     </div>
 
     <div class="calendar">
