--- a/views/client.ejs
+++ b/views/client.ejs
@@ -14,6 +14,7 @@
       #map {
         height: 90%;
         top: 2%;
+        box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
       }
       /* Optional: Makes the sample page fill the window. */
       html, body {
